Continue code genaration