@@ -50,7 +50,8 @@
                     <source>17</source>
                     <target>17</target>
                     <release>17</release>
-                  </configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
